# SBIPPoC

./: CMakeLists.txt  attestation.edl
common/: crypto.cpp  dispatcher.cpp  dispatcher.h
enclave/: CMakeLists.txt  ecall.cpp
host/: CMakeLists.txt  host.cpp
